--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@ comes with the following three properties, for free:</p>
 
 <ul>
 <li>
-<strong><a href="https://github.com/element" class="user-mention">@element</a>:</strong> References a single jQuery DOM Object, which can perform
+<strong>element:</strong> References a single jQuery DOM Object, which can perform
 basic functionality on the page. It is obtained from the collection of
 objects which matched the plugin's selector upon instantiation.</li>
 <li>
-<strong><a href="https://github.com/index" class="user-mention">@index</a>:</strong> The index of the jQuery DOM Object in the collection of
+<strong>index:</strong> The index of the jQuery DOM Object in the collection of
 objects which matched the plugin's selector upon instantiation.</li>
 <li>
-<strong><a href="https://github.com/options" class="user-mention">@options</a>:</strong> A Hash-notated Object obtained as the only argument in
+<strong>options:</strong> A Hash-notated Object obtained as the only argument in
 the jQuery plugin when instantiated. This object is then merged with
 the <code>defaults</code> hash, which are default params in the plugin's
 definition, before initialization occurs.</li>
