--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Sumatra by tubbo</title>
+    <title>Sumatra - Beautiful jQuery Plugins with CoffeeScript</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>Sumatra</h1>
-          <p>Sumatra is a CoffeeScript framework for making beautiful jQuery plugins.</p>
+          <p>A CoffeeScript framework for making beautiful jQuery plugins.</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/tubbo">tubbo</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
