--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html>
 <head>
   <title>proof of concept test - sumatra</title>
-  <script src="components/coffee-script/extras/coffee-script.js"></script>
-  <script src="components/jquery/jquery.js"></script>
-  <script src="components/underscore/underscore.js"></script>
+  <script src="vendor/components/coffee-script/extras/coffee-script.js"></script>
+  <script src="vendor/components/jquery/jquery.js"></script>
+  <script src="vendor/components/underscore/underscore.js"></script>
   <script src="pkg/sumatra.js"></script>
   <script type="text/coffeescript">
     sumatra 'clickToAlert', ->
-      class AlertInterface extends SumatraPlugin
+      class PluginHelper extends SumatraPlugin
         action: 'click'
+        initialize: ->
+          alert 'initialized'
+          true
         perform: (event) =>
           event.preventDefault()
-          alert "oh shit"
+          alert 'clicked'
 
     jQuery -> $('a').clickToAlert()
   </script>
