Instruct users who are running the smoke test to also install coffee-script.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
   </script>
 </head>
 <body>
-  <a href="#">click me</a>
+  <p>
+    For this to work, you need to:
+
+    <code><pre>
+      bower install coffee-script sumatra
+    </pre></code>
+  </p>
+  <p>
+    <a href="#">click me</a>
+  </p>
 </body>
 </html>
